--- a/gitstorage.html
+++ b/gitstorage.html
@@ -11,7 +11,7 @@
 var fam '{ "familyMemebers" : [' +
 '{ "firstName":"Nancy" , "lastName":"Palmer" },' +
 '{ "firstName":"Addison" , "lastName":"Palmer" },' +
-'{ "firstName":"Davin" , "lastName":"Palmer" } +
+'{ "firstName":"Davin" , "lastName":"Palmer" }, ' +
 '{ "firstName":"Janey" , "lastName":"Palmer" }]}';
 
 obj = JSON.parse(fam);
