--- a/gitstorage.html
+++ b/gitstorage.html
@@ -8,7 +8,7 @@
 <h1>These are my family members!</h1>
 <p id="members"></p>
 <script>
-var fam '{ "familyMemebers" : [' +
+var fam = '{ "familyMemebers" : [' +
 '{ "firstName":"Nancy" , "lastName":"Palmer" },' +
 '{ "firstName":"Addison" , "lastName":"Palmer" },' +
 '{ "firstName":"Davin" , "lastName":"Palmer" }, ' +
