--- a/index.html
+++ b/index.html
@@ -1,20 +1,56 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>CIT261</title>
+	<meta charset="utf-8">
+	<title>CIT261</title>
 </head>
 <body>
-<h1>These are my family members!</h1>
+
+<h1>The Palmer Family</h1>
+
+<p>This is a list of my family and their favorite colors, foods, and where they live.</p>
+
 <p id="members"></p>
+
 <script>
-var fam = '{ "familyMembers" : [' +
-'{ "firstName":"Nancy" , "lastName":"Palmer" },' +
-'{ "firstName":"Addison" , "lastName":"Palmer" },' +
-'{ "firstName":"Davin" , "lastName":"Palmer" }, ' +
-'{ "firstName":"Janey" , "lastName":"Palmer" }]}';
-obj = JSON.parse(fam);
-document.getElementById("members").innerHTML = "My wife is " + obj.familyMembers[0].firstName + ", and our children from oldest to youngest, " + obj.familyMembers[1].firstName + ", " + obj.familyMembers[2].firstName + ", and " + obj.familyMembers[3].firstName + ".";
+var myFamily, i, j, x = "";
+myFamily = {
+    "familyMembers": [
+        { "name":"Nancy", "age":"private", "favorites":[ "Favorite color: green", "Favorite food: Salad", "She lives in Arizona" ] },
+        { "name":"Addison", "age":6, "favorites":[ "Fvorite color: pink", "Favorite food: pizza", "Lives in Arizona"  ] },
+		{ "name":"Davin", "age":5, "favorites":[ "Favorite color: red", "Favorite food: french fries", "Lives in Arizona"  ] },
+        { "name":"Janey", "age":1, "favorites":[ "Favorite color: purple", "Favorite food: milk", "Lives in Arizona"  ] }
+    ]
+}	
+
+//Storing data:
+myFamily = {
+    "familyMembers": [
+        { "name":"Nancy", "age":"private", "favorites":[ "Favorite color: green", "Favorite food: Salad", "She lives in Arizona" ] },
+        { "name":"Addison", "age":6, "favorites":[ "Fvorite color: pink", "Favorite food: pizza", "Lives in Arizona"  ] },
+		{ "name":"Davin", "age":5, "favorites":[ "Favorite color: red", "Favorite food: french fries", "Lives in Arizona"  ] },
+        { "name":"Janey", "age":1, "favorites":[ "Favorite color: purple", "Favorite food: milk", "Lives in Arizona"  ] }
+    ]
+};
+myJSON = JSON.stringify(myFamily);
+localStorage.setItem("family", myJSON);
+
+
+//Retrieving data:
+text = localStorage.getItem("family");
+obj = JSON.parse(text);
+
+
+for (i in myFamily.familyMembers) {
+	x += "<h2>" + myFamily.familyMembers[i].name + "</h2>";
+	for (j in myFamily.familyMembers[i].favorites) {
+		x += myFamily.familyMembers[i].favorites[j] + "<br>";
+	}
+}
+	
+document.getElementById("members").innerHTML = x;
+
 </script>
+
 </body>
 </html>
