--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
@@ -54,3 +54,4 @@ document.getElementById("members").innerHTML = x;
 
 </body>
 </html>
+-->
