Changes to index.html

--- a/index.html
+++ b/index.html
@@ -1,57 +1,18 @@
-<!--<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
 	<title>CIT261</title>
 </head>
 <body>
-
-<h1>The Palmer Family</h1>
-
-<p>This is a list of my family and their favorite colors, foods, and where they live.</p>
-
-<p id="members"></p>
-
-<script>
-var myFamily, i, j, x = "";
-myFamily = {
-    "familyMembers": [
-        { "name":"Nancy", "age":"private", "favorites":[ "Favorite color: green", "Favorite food: Salad", "She lives in Arizona" ] },
-        { "name":"Addison", "age":6, "favorites":[ "Fvorite color: pink", "Favorite food: pizza", "Lives in Arizona"  ] },
-		{ "name":"Davin", "age":5, "favorites":[ "Favorite color: red", "Favorite food: french fries", "Lives in Arizona"  ] },
-        { "name":"Janey", "age":1, "favorites":[ "Favorite color: purple", "Favorite food: milk", "Lives in Arizona"  ] }
-    ]
-}	
-
-//Storing data:
-myFamily = {
-    "familyMembers": [
-        { "name":"Nancy", "age":"private", "favorites":[ "Favorite color: green", "Favorite food: Salad", "She lives in Arizona" ] },
-        { "name":"Addison", "age":6, "favorites":[ "Fvorite color: pink", "Favorite food: pizza", "Lives in Arizona"  ] },
-		{ "name":"Davin", "age":5, "favorites":[ "Favorite color: red", "Favorite food: french fries", "Lives in Arizona"  ] },
-        { "name":"Janey", "age":1, "favorites":[ "Favorite color: purple", "Favorite food: milk", "Lives in Arizona"  ] }
-    ]
-};
-myJSON = JSON.stringify(myFamily);
-localStorage.setItem("family", myJSON);
-
-
-//Retrieving data:
-text = localStorage.getItem("family");
-obj = JSON.parse(text);
-
-
-for (i in myFamily.familyMembers) {
-	x += "<h2>" + myFamily.familyMembers[i].name + "</h2>";
-	for (j in myFamily.familyMembers[i].favorites) {
-		x += myFamily.familyMembers[i].favorites[j] + "<br>";
-	}
-}
-	
-document.getElementById("members").innerHTML = x;
-
-</script>
-
+    <header>
+    </header>
+    <nav>
+    </nav>
+    <main>
+        <h1>Website Soon to Come!</h1>
+    </main>
+    <footer>
+    </footer>
 </body>
 </html>
--->
