--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     </nav>
     <main>
         <h1>Website Soon to Come!</h1>
+        <p>Hello World!</p>
     </main>
     <footer>
     </footer>
