--- a/index.html
+++ b/index.html
@@ -2,18 +2,53 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>CIT261</title>
+	<title>My Website for Practice</title>
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
+    <style>
+        body {
+            display: flex;
+            flex-flow: column nowrap;
+            justify-content: space-around;
+            background: yellow;
+            color: #fff;
+            font-family: 'Source Sans Pro', sans-serif;
+        }
+        
+        header {
+            flex-grow: 1;
+        }
+        
+        #main-flex {
+            display: flex;
+            flex-flow: row wrap;
+            justify-content: space-around;
+            align-items: flex-start;
+        }
+    </style>
 </head>
 <body>
     <header>
+        <img src="img/mylogo.png" alt="My site logo">
     </header>
     <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Products</a></li>
+            <li><a href="#">Tours</a></li>
+            <li><a href="#">About Us</a></li>
+        </ul>
     </nav>
-    <main>
-        <h1>Website Soon to Come!</h1>
-        <p>Hello World!</p>
+    <div>
+        <h1>Root Inc.</h1>
+    </div>
+    <main id="main-flex">
+        <section>Section 1</section>
+        <section>Section 2</section>
+        <section>Section 3</section>
+        <article>Article</article>
     </main>
     <footer>
+        <p>This is my footer</p>
     </footer>
 </body>
 </html>
