--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
     <nav class="navbar">
         <ul>
-            <li class="css3.html"><a href="#">CSS 3 Animation and Transition triggered by JavaScript</a></li>
+            <li class=""><a href="css3.html">CSS 3 Animation and Transition triggered by JavaScript</a></li>
             <li class=""><a href="#">Assessment 2</a></li>
             <li class=""><a href="#">Assessment 3</a></li>
             <li class=""><a href="#">Assessment 4</a></li>
