--- a/index.html
+++ b/index.html
@@ -24,37 +24,37 @@
         <tbody>
             <tr>
                 <td>01</td>
-                <td><a href="01.html">Loops, Conditional Statements, Functions, Variables, Parameters, Arrays, Associative Arrays</a></td>
+                <td><a href="loops.html">Loops, Conditional Statements, Functions, Variables, Parameters, Arrays, Associative Arrays</a></td>
                 <td>Not Graded</td>
             </tr>
             <tr>
                 <td>02</td>
-                <td><a href="02.html">Object Creation Functions, Inheritance, Properties, Methods, Instantiation</a></td>
+                <td><a href="inheritance.html">Object Creation Functions, Inheritance, Properties, Methods, Instantiation</a></td>
                 <td>Not Graded</td>
             </tr>
             <tr>
                 <td>03</td>
-                <td><a href="03.html">JSON Parse, Stringify</a></td>
+                <td><a href="parsestring.html">JSON Parse, Stringify</a></td>
                 <td>Not Graded</td>
             </tr>
             <tr>
                 <td>04</td>
-                <td><a href="04.html">AJAX requesting a JSON file</a></td>
+                <td><a href="ajax.html">AJAX requesting a JSON file</a></td>
                 <td>Not Graded</td>
             </tr>
             <tr>
                 <td>05</td>
-                <td><a href="05.html">Local Storage API, Storing and Retrieving Simple Data, Arrays, Associative Arrays, and Objects</a></td>
+                <td><a href="localstorage.html">Local Storage API, Storing and Retrieving Simple Data, Arrays, Associative Arrays, and Objects</a></td>
                 <td>Not Graded</td>
             </tr>
             <tr>
                 <td>06</td>
-                <td><a href="06.html">DOM Manipulation Using createElement, appendChild, insertBefore, removeChild, etc.</a></td>
+                <td><a href="dom.html">DOM Manipulation Using createElement, appendChild, insertBefore, removeChild, etc.</a></td>
                 <td>Not Graded</td>
             </tr>
             <tr>
                 <td>07</td>
-                <td><a href="07.html">Manipulating CSS Class Properties Using JavaScript</a></td>
+                <td><a href="cssManny.html">Manipulating CSS Class Properties Using JavaScript</a></td>
                 <td>Not Graded</td>
             </tr>
             <tr>
@@ -64,27 +64,27 @@
             </tr>
             <tr>
                 <td>09</td>
-                <td><a href="09.html">Standard JavaScript Events Including those for Mobile Devices</a></td>
+                <td><a href="jsevents.html">Standard JavaScript Events Including those for Mobile Devices</a></td>
                 <td>Not Graded</td>
             </tr>
             <tr>
                 <td>10</td>
-                <td><a href="10.html">HTML5 Tags - Video, Audio, and Canvas</a></td>
+                <td><a href="tagsCanvas.html">HTML5 Tags - Video, Audio, and Canvas</a></td>
                 <td>Not Graded</td>
             </tr>
             <tr>
                 <td>11</td>
-                <td><a href="11.html">Designing, Defining, and Triggering CSS3 Transitions without Custom Libraries</a></td>
+                <td><a href="design1.html">Designing, Defining, and Triggering CSS3 Transitions without Custom Libraries</a></td>
                 <td>Not Graded</td>
             </tr>
             <tr>
                 <td>12</td>
-                <td><a href="12.html">Designing, Defining, and Triggering CSS3 Transforms without Custom Libraries</a></td>
+                <td><a href="design2.html">Designing, Defining, and Triggering CSS3 Transforms without Custom Libraries</a></td>
                 <td>Not Graded</td>
             </tr>
             <tr>
                 <td>13</td>
-                <td><a href="13.html">Designing, Defining, and Triggering CSS3 Animations without Custom Libraries</a></td>
+                <td><a href="design3.html">Designing, Defining, and Triggering CSS3 Animations without Custom Libraries</a></td>
                 <td>Not Graded</td>
             </tr>
         </tbody>
