--- a/AjaxTable.html
+++ b/AjaxTable.html
@@ -93,7 +93,7 @@ I have tried to keep this kind of minimal so you can see what is going on. This 
 function getJSON()
 {
 	var xmlhttp = new XMLHttpRequest();
-	var url = "fallClass.json";
+	var url = "json/storedInfo.json";
 
 	xmlhttp.onreadystatechange=function()
 	{
