--- a/css3.html
+++ b/css3.html
@@ -7,6 +7,10 @@
     <meta name="author" content="Robert E. Palmer">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <style>
+        /* Internal CSS for easier and faster access */
+        body {
+            margin: 1em 3em;
+        }
         #home {
             width: 4em;
             height: 2em;
@@ -44,6 +48,7 @@
             overflow: hidden;
         }
         
+        /* This is box4 CSS */
         #container {
             width: 400px;
             height: 400px;
