--- a/cssManny.html
+++ b/cssManny.html
@@ -95,7 +95,7 @@
             }
         </script>
         <!--CSS is being manipulating through javascript functions -->
-        <h4><strong>Mouse over the paragraph to see the change!!!</strong></h4>
+        <h4><strong>Hover the mouse over the paragraph to see the change!!!</strong></h4>
         <p id="para" onmouseover="shadow()" onmouseout="reverseShadow()">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p><br>
         <button type="button" onclick="textSize()">Change Text Size</button>
         <button type="button" onclick="changeBack()">Reset Text</button>
@@ -103,7 +103,7 @@
         <br><br>
         <fieldset>
             <form action="">
-                First Name: <input type="text" placeholder="Enter text" id="fname"><br>
+                First Name: <input type="text" placeholder="Enter Your first name" id="fname"><br>
                 <button type="button" onclick="sayHi()">Submit</button>
             </form>
         </fieldset>
