developing by Robert
I am deveolping Local Storage and CSS

--- a/css3.html
+++ b/css3.html
@@ -110,7 +110,7 @@
         function myMove() {
             var elem = document.getElementById("box4");   
             var pos = 0;
-            var id = setInterval(frame, 5);
+            var id = setInterval(frame, .001);
                 function frame() {
                     if (pos == 350) {
                         clearInterval(id);
