--- a/ajax.html
+++ b/ajax.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>AJAX XMKHttpRequest | CIT 261</title>
+        <meta name="author" content="Robert E. Palmer">
+        <meta name="description" content="page description placeholder">
+        <script src="json/palmerfam.json"></script>
+        <script src="js/xhr.js"></script>
         <style>
         
         </style>
     </head>
     <body>
-        
+        <div id="demo"></div>
+        <input type="reset" value="Reset">
+        <button type="button" onclick="window.location.href='index.html'">Home</button>
+        <p id="content"></p>
     </body>
 </html>
