--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </tr>
             <tr>
                 <td>09</td>
-                <td><a href="jsevents.html">Standard JavaScript Events Including those for Mobile Devices</a></td>
+                <td><a href="design3.html">Standard JavaScript Events Including those for Mobile Devices</a></td>
                 <td>Not Graded</td>
             </tr>
             <tr>
