--- a/tagsCanvas.html
+++ b/tagsCanvas.html
@@ -18,8 +18,8 @@
         }
         
         canvas {
-            width: 400;
-            height: 300;
+            width: 100%;
+            height: 100%;
             border: 1px solid #fff;
         }
     </style>
