--- a/reflection.html
+++ b/reflection.html
@@ -46,8 +46,8 @@
             <p id="p3">Another learning curve for me was with <strong>XMLHttpRequests</strong>. </p>
         <h4>Example XHR</h4>
         <!-- Give a simple XHR example to show understanding. Keep good documentation. -->
-        <div id="xhr"></div>
-        <hr>
+        <button id="homebtn" onclick="window.location.href='index.html'">Home</button>
+        <button id="resetbtn" onclick="location.reload()">Reset</button>
            <h4>Gratitude</h4>
             <p id="p4">This has been a great opportunity for me to learn. I feel like I've learned a lot that will get me far in my career. I will be grateful to my Lord and Savior Jesus Christ for this chance to better myself and my way of life.</p>
         <hr>
